@startuml
class Car {
    -_id: String
    -_model: String
    -_brand: String
    +Car(id: String, model: String, brand: String)
    +getId(): String
    +getModel(): String
    +getBrand(): String
}

class CarDataHandler {
    +getCarById(carId: String): Car
    +getAllCars(): List<Car>
    +getBestCar(): Car
}

class CarManager {
    +getFromDb(carId: String): Car
    +getCarsNames(): String
    +getBestCar(): Car
}

CarDataHandler "1" --> "1..*"  Car
CarManager  -->  CarDataHandler
@enduml
